# python-fastapi-template

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
fastapi_template/: main.py
fastapi_template/infra/core/config/: __init__.py  supported.py  util.py
fastapi_template/infra/core/security/: __init__.py  permissions.py  roles.py
fastapi_template/infra/utils/: docs.py
fastapi_template/v1/domain/contracts/: services.py
fastapi_template/v1/server/exceptions/: __init__.py  messages.py
fastapi_template/v1/server/handlers/: base.py  users.py
fastapi_template/v1/server/routers/: __init__.py  base.py
fastapi_template/v1/server/routers/main/: __init__.py  admins.py  users.py
fastapi_template/v1/server/routers/main/admins/: admins.py
fastapi_template/v1/server/routers/root/: __init__.py  health.py
